--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./styles/app.css">
 </head>
 <body>
-    <div id="root"></div>
+    <div id="root">11111</div>
 
 
     <script src="./libs/zepto.min.js"></script>
